--- a/Mafia/Base.lproj/Main.storyboard
+++ b/Mafia/Base.lproj/Main.storyboard
@@ -247,7 +247,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="МАФИЯ" id="uiW-uU-I3i">
                         <barButtonItem key="leftBarButtonItem" title="Меню" id="r2t-kr-lnX">
-                            <color key="tintColor" red="1" green="0.0098039215690000001" blue="0.0098039215690000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="tintColor" red="0.59999999999999998" green="0.0039215686269999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -266,7 +266,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="szG-dh-KKY" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="FzV-ee-t8s" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4288.8000000000002" y="135.38230884557723"/>
+            <point key="canvasLocation" x="4241" y="36"/>
         </scene>
         <!--МАФИЯ-->
         <scene sceneID="CvP-XR-Qwy">
@@ -492,7 +492,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="Cvo-3B-IHr" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="04F-gc-sr6"/>
+                                    <segue destination="Cvo-3B-IHr" kind="custom" identifier="continue_game" customClass="SWRevealViewControllerSeguePushController" id="04F-gc-sr6"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="settings" textLabel="97f-D9-EYe" style="IBUITableViewCellStyleDefault" id="QNw-sr-jLO">
@@ -565,6 +565,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Cvo-3B-IHr" kind="custom" identifier="end_game" customClass="SWRevealViewControllerSeguePushController" id="M49-YN-jhb"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -592,6 +595,9 @@
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gfW-85-c58">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="oNQ-Ax-mL0" kind="relationship" relationship="rootViewController" id="Nc8-gO-2wj"/>
                     </connections>
@@ -963,6 +969,6 @@
         <image name="icon ratin global big" width="8" height="15"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="04F-gc-sr6"/>
+        <segue reference="M49-YN-jhb"/>
     </inferredMetricsTieBreakers>
 </document>
