--- a/Mafia/Base.lproj/Main.storyboard
+++ b/Mafia/Base.lproj/Main.storyboard
@@ -976,22 +976,49 @@
                                         <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PlayTableViewCell" textLabel="7JD-lN-6et" style="IBUITableViewCellStyleDefault" id="AJK-7Q-X23">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ActionsTableViewCell" id="AJK-7Q-X23" customClass="ActionsTableViewCell" customModule="Mafia" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="1" width="335" height="68"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AJK-7Q-X23" id="n5P-qo-uNY">
                                                     <rect key="frame" x="0.0" y="0.0" width="335" height="68"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7JD-lN-6et">
-                                                            <rect key="frame" x="15" y="0.0" width="305" height="68"/>
-                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Role icon sitizen" translatesAutoresizingMaskIntoConstraints="NO" id="Ewr-8b-YaR">
+                                                            <rect key="frame" x="8" y="8" width="52" height="52"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="52" id="HO9-Vv-lL7"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Имя" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9By-Y6-Y8k">
+                                                            <rect key="frame" x="75" y="24" width="156" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qk5-Fa-iXC">
+                                                            <rect key="frame" x="239" y="19" width="88" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="88" id="2x6-7G-Ih4"/>
+                                                            </constraints>
+                                                            <state key="normal" title="Выбрать"/>
+                                                        </button>
                                                     </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="Ewr-8b-YaR" firstAttribute="top" secondItem="n5P-qo-uNY" secondAttribute="topMargin" id="0fL-C2-pfm"/>
+                                                        <constraint firstItem="Ewr-8b-YaR" firstAttribute="centerY" secondItem="9By-Y6-Y8k" secondAttribute="centerY" id="61Q-T8-pHm"/>
+                                                        <constraint firstItem="Ewr-8b-YaR" firstAttribute="bottom" secondItem="n5P-qo-uNY" secondAttribute="bottomMargin" id="HYl-M5-Kza"/>
+                                                        <constraint firstItem="9By-Y6-Y8k" firstAttribute="centerY" secondItem="qk5-Fa-iXC" secondAttribute="centerY" id="JZ5-OH-ubF"/>
+                                                        <constraint firstItem="9By-Y6-Y8k" firstAttribute="leading" secondItem="Ewr-8b-YaR" secondAttribute="trailing" constant="15" id="PEP-oe-XME"/>
+                                                        <constraint firstItem="qk5-Fa-iXC" firstAttribute="trailing" secondItem="n5P-qo-uNY" secondAttribute="trailingMargin" id="g6s-Se-d7N"/>
+                                                        <constraint firstItem="Ewr-8b-YaR" firstAttribute="leading" secondItem="n5P-qo-uNY" secondAttribute="leadingMargin" id="p4x-dO-gIR"/>
+                                                        <constraint firstItem="qk5-Fa-iXC" firstAttribute="leading" secondItem="9By-Y6-Y8k" secondAttribute="trailing" constant="8" symbolic="YES" id="pEu-N2-y4D"/>
+                                                    </constraints>
                                                 </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="actionRoleImage" destination="Ewr-8b-YaR" id="YdJ-Ge-wQd"/>
+                                                    <outlet property="chooseButton" destination="qk5-Fa-iXC" id="uAd-zI-Ur4"/>
+                                                    <outlet property="nameLabel" destination="9By-Y6-Y8k" id="9mf-4N-INu"/>
+                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
                                         <sections/>
@@ -1018,22 +1045,49 @@
                                         <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PlayTableViewCell" textLabel="3bn-hU-JMb" style="IBUITableViewCellStyleDefault" id="IZB-fx-Lmo">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChoosePlayerRoleTableViewCell" id="IZB-fx-Lmo" customClass="ChoosePlayerRoleTableViewCell" customModule="Mafia" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="1" width="335" height="68"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IZB-fx-Lmo" id="zFv-XF-CRJ">
                                                     <rect key="frame" x="0.0" y="0.0" width="335" height="68"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3bn-hU-JMb">
-                                                            <rect key="frame" x="15" y="0.0" width="305" height="68"/>
-                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Role icon sitizen" translatesAutoresizingMaskIntoConstraints="NO" id="xdc-tI-31j">
+                                                            <rect key="frame" x="8" y="8" width="52" height="52"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="52" id="cfh-Yg-3g6"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Имя" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EsM-0h-6SW">
+                                                            <rect key="frame" x="75" y="24" width="156" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uP5-8D-dCJ">
+                                                            <rect key="frame" x="239" y="19" width="88" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="88" id="qpV-Sy-OA8"/>
+                                                            </constraints>
+                                                            <state key="normal" title="Выбрать"/>
+                                                        </button>
                                                     </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="xdc-tI-31j" firstAttribute="top" secondItem="zFv-XF-CRJ" secondAttribute="topMargin" id="1rB-rp-D7V"/>
+                                                        <constraint firstItem="EsM-0h-6SW" firstAttribute="leading" secondItem="xdc-tI-31j" secondAttribute="trailing" constant="15" id="6ni-5d-DbF"/>
+                                                        <constraint firstItem="xdc-tI-31j" firstAttribute="bottom" secondItem="zFv-XF-CRJ" secondAttribute="bottomMargin" id="9ig-Yu-dmP"/>
+                                                        <constraint firstItem="xdc-tI-31j" firstAttribute="leading" secondItem="zFv-XF-CRJ" secondAttribute="leadingMargin" id="JIW-2g-uYe"/>
+                                                        <constraint firstItem="uP5-8D-dCJ" firstAttribute="trailing" secondItem="zFv-XF-CRJ" secondAttribute="trailingMargin" id="MAh-ed-Aw6"/>
+                                                        <constraint firstItem="EsM-0h-6SW" firstAttribute="centerY" secondItem="uP5-8D-dCJ" secondAttribute="centerY" id="U1f-yM-4sX"/>
+                                                        <constraint firstItem="uP5-8D-dCJ" firstAttribute="leading" secondItem="EsM-0h-6SW" secondAttribute="trailing" constant="8" symbolic="YES" id="kSv-hM-YLL"/>
+                                                        <constraint firstItem="xdc-tI-31j" firstAttribute="centerY" secondItem="EsM-0h-6SW" secondAttribute="centerY" id="ny4-mA-XfF"/>
+                                                    </constraints>
                                                 </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="chooseButton" destination="uP5-8D-dCJ" id="MoY-Pq-95C"/>
+                                                    <outlet property="nameLabel" destination="EsM-0h-6SW" id="fUF-7e-JN4"/>
+                                                    <outlet property="roleImage" destination="xdc-tI-31j" id="fxh-jy-vWA"/>
+                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
                                         <sections/>
